package animalfarm.animals;

public enum DogType {
    SHEPHERD,
    RETRIEVER,
    HUSKY,
    OTHER;
}
